salesforce/force-app/main/default/objects/Outbound_Target__c/Outbound_Target__c.object-meta.xml
<CustomObject>
    <description>Tracks outbound prospecting targets for Q1 FY26 campaign (400 targets)</description>
    <label>Outbound Target</label>
    <nameField>
        <displayFormat>OT-{00000}</displayFormat>
        <label>Target Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Outbound Targets</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>