salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Account__c.field-meta.xml
<CustomField>
    <fullName>Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Target account for outbound campaign</description>
    <label>Account</label>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Outbound Targets</relationshipLabel>
    <relationshipName>Outbound_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>