salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Assigned_BL__c.field-meta.xml
<CustomField>
    <fullName>Assigned_BL__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Business Lead assigned to work this target</description>
    <label>Assigned BL</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Outbound_Targets</relationshipName>
    <type>Lookup</type>
</CustomField>