salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Cadence_Day__c.field-meta.xml
<CustomField>
    <fullName>Cadence_Day__c</fullName>
    <defaultValue>1</defaultValue>
    <description>Current day in the outreach cadence</description>
    <label>Cadence Day</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>