salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Industry_Segment__c.field-meta.xml
<CustomField>
    <fullName>Industry_Segment__c</fullName>
    <description>Industry segment for targeting</description>
    <label>Industry Segment</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Pharma</fullName>
            </value>
            <value>
                <fullName>Oil and Gas</fullName>
            </value>
            <value>
                <fullName>Financial Services</fullName>
            </value>
            <value>
                <fullName>Manufacturing</fullName>
            </value>
            <value>
                <fullName>Insurance</fullName>
            </value>
            <value>
                <fullName>Tech SaaS</fullName>
                <label>Tech/SaaS</label>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>