salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Last_Touch_Date__c.field-meta.xml
<CustomField>
    <fullName>Last_Touch_Date__c</fullName>
    <description>Date of last outreach activity</description>
    <label>Last Touch Date</label>
    <type>Date</type>
</CustomField>