salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Loom_Recorded__c.field-meta.xml
<CustomField>
    <fullName>Loom_Recorded__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has a personalized Loom demo been recorded?</description>
    <label>Loom Recorded</label>
    <type>Checkbox</type>
</CustomField>