salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Personalization_Complete__c.field-meta.xml
<CustomField>
    <fullName>Personalization_Complete__c</fullName>
    <defaultValue>false</defaultValue>
    <description>Has executive/company research been completed?</description>
    <label>Personalization Complete</label>
    <type>Checkbox</type>
</CustomField>