salesforce/force-app/main/default/objects/Outbound_Target__c/fields/Touch_Count__c.field-meta.xml
<CustomField>
    <fullName>Touch_Count__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Total number of outreach touches</description>
    <label>Touch Count</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>